--- a/examples/Example_HDF5_Insights.ipynb
+++ b/examples/Example_HDF5_Insights.ipynb
@@ -4882,7 +4882,7 @@
        "     </g>\n",
        "    </g>\n",
        "    <g id=\"text_14\">\n",
-       "     <text style=\"font-family:Arial;font-size:10px;font-style:normal;font-weight:normal;text-anchor:middle;\" transform=\"rotate(-90, 14.357813, 184.869375)\" x=\"14.357813\" y=\"184.869375\">Lenght [µm]</text>\n",
+       "     <text style=\"font-family:Arial;font-size:10px;font-style:normal;font-weight:normal;text-anchor:middle;\" transform=\"rotate(-90, 14.357813, 184.869375)\" x=\"14.357813\" y=\"184.869375\">Length [µm]</text>\n",
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_13\">\n",
@@ -5002,7 +5002,7 @@
     "pyplot.title('Length over Time')\n",
     "\n",
     "pyplot.xlabel('Time [h]')\n",
-    "pyplot.ylabel('Lenght [µm]')\n",
+    "pyplot.ylabel('Length [µm]')\n",
     "\n",
     "pyplot.plot(timepoint, length)"
    ]
@@ -8093,7 +8093,7 @@
        "     </g>\n",
        "    </g>\n",
        "    <g id=\"text_15\">\n",
-       "     <text style=\"font-family:Arial;font-size:10px;font-style:normal;font-weight:normal;text-anchor:middle;\" transform=\"rotate(-90, 14.357813, 184.869375)\" x=\"14.357813\" y=\"184.869375\">Lenght [µm]</text>\n",
+       "     <text style=\"font-family:Arial;font-size:10px;font-style:normal;font-weight:normal;text-anchor:middle;\" transform=\"rotate(-90, 14.357813, 184.869375)\" x=\"14.357813\" y=\"184.869375\">Length [µm]</text>\n",
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_14\">\n",
@@ -8168,7 +8168,7 @@
     "pyplot.title('Length over Time')\n",
     "\n",
     "pyplot.xlabel('Time [h]')\n",
-    "pyplot.ylabel('Lenght [µm]')\n",
+    "pyplot.ylabel('Length [µm]')\n",
     "\n",
     "pyplot.plot(timepoint, length)"
    ]
@@ -8353,7 +8353,7 @@
        "     </g>\n",
        "    </g>\n",
        "    <g id=\"text_13\">\n",
-       "     <text style=\"font-family:Arial;font-size:10px;font-style:normal;font-weight:normal;text-anchor:middle;\" transform=\"rotate(-90, 14.357813, 184.869375)\" x=\"14.357813\" y=\"184.869375\">Lenght [µm]</text>\n",
+       "     <text style=\"font-family:Arial;font-size:10px;font-style:normal;font-weight:normal;text-anchor:middle;\" transform=\"rotate(-90, 14.357813, 184.869375)\" x=\"14.357813\" y=\"184.869375\">Length [µm]</text>\n",
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_12\">\n",
@@ -8696,7 +8696,7 @@
     "pyplot.title('Length over Time')\n",
     "\n",
     "pyplot.xlabel('Time [h]')\n",
-    "pyplot.ylabel('Lenght [µm]')\n",
+    "pyplot.ylabel('Length [µm]')\n",
     "\n",
     "for idx, row in track_table.iterrows():\n",
     "    particular_tracking_table = int(row.aux_table)  \n",
